[package]
name = "keypeat"
version = "0.1.1"
edition = "2021"
license = "Apache-2.0 OR MIT"
homepage = "https://github.com/d-e-s-o/keypeat"
repository = "https://github.com/d-e-s-o/keypeat.git"
documentation = "https://docs.rs/keypeat"
readme = "README.md"
categories = [
  "accessibility",
  "algorithms",
  "api-bindings",
  "command-line-utilities",
  "gui"
]
keywords = [
  "keys",
  "input",
  "repeat",
  "winit",
  "notification",
]
description = """
Generic, std-only key repetition handling for Rust.
"""

[dev-dependencies]
libc = "0.2"
winit = "0.30"

[lints.rust]
deprecated-safe = "warn"
future-incompatible = "warn"
keyword-idents = "warn"
let-underscore = "warn"
missing-debug-implementations = "warn"
missing-docs = "warn"
trivial-numeric-casts = "warn"
unsafe-op-in-unsafe-fn = "warn"
unused = "warn"

[lints.clippy]
collapsible-else-if = "allow"
collapsible-if = "allow"
diverging-sub-expression = "allow"
let-and-return = "allow"
let-unit-value = "allow"
module-inception = "allow"
type-complexity = "allow"
absolute-paths = "warn"
allow-attributes = "warn"
clone-on-ref-ptr = "warn"
dbg-macro = "warn"
derive-partial-eq-without-eq = "warn"
doc-markdown = "warn"
join-absolute-paths = "warn"
large-enum-variant = "warn"
redundant-closure-for-method-calls = "warn"
unchecked-duration-subtraction = "warn"
uninlined-format-args = "warn"
wildcard-imports = "warn"
